--- a/index.html
+++ b/index.html
@@ -95,74 +95,84 @@
         <div class="col-md 6">
           <label>Asia</label>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:20%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">45%</div>
+            <div class="progress-bar" role="progressbar" style="width:20%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">30%</div>
           </div>
           <label>North America</label>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">45%</div>
+            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">25%</div>
           </div>
           <label>South America</label>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">45%</div>
+            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">27%</div>
           </div>
           <label>Europe</label>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">45%</div>
+            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">10%</div>
           </div>
           <label>Africa</label>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">45%</div>
+            <div class="progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">8%</div>
           </div>
         </div>
     </div>
   </div>
 </section>
 
-<section class="services-class" id="services-id">
-  <div class="container">
-  <div class="row">
-  <div class="col-sm-2">
-  <img src=""  class="img">
-  </div>
+<section class="service-class bg-sec r-p" id="service-id">
 
-  <!--
-
-  <div class="col">
-  <h2>Enjoy High Quality Ad-free Listening</h2>
-  </div>
-
- <div class="row">
- <div class="col-sm-2">
- <img src="images\icon2.png"  class="img">
- </div>
-
- <div class="col">
- <h2>Enjoy High Quality Ad-free Listening</h2>
- </div>
- <div class="row">
- <div class="col-sm-2">
- <img src="images\icon3.jpg"  class="img">
- </div>
-
- <div class="col">
- <h2>Enjoy High Quality Ad-free Listening</h2>
- </div>
-
- <div class="row">
- <div class="col-sm-2">
- <img src="images\icon4.jpg" class="img">
- </div>
-
-  <div class="col">
-  <h2>Enjoy High Quality Ad-free Listening</h2>
-  </div>
-
-
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <div class="col">
+          <h2>Prices and Subscriptions</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h2>Master</h2>
+          </div>
+          <div class="card-body">
+            <h5>Just for Rs.699 per month</h5>
+          </div>
+        </div>
+      </div>
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h2>High Fidelity</h2>
+            </div>
+            <div class="card-body">
+              <h5>Just for Rs.399 per month</h5>
+            </div>
+          </div>
+        </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <div class="card-header">
+                <h2>Regular</h2>
+              </div>
+              <div class="card-body">
+                <h5>Just for Rs.99 per month</h5>
+              </div>
+            </div>
+          </div>
     </div>
   </div>
 </section>
--->
 
+<section class="trial r-p" id="trial-id">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <h3 class="mb-4">Start Free Trial</h3>
+        <a href="#" class="btn r-btn">Start Trial</a>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <script src="lib\jquery-3.5.1.min.js"></script>
