--- a/index.html
+++ b/index.html
@@ -30,19 +30,17 @@
   <div class="collapse navbar-collapse" id="navbarId">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a href="" class="nav-link">Home</a>
+      <a href="#home" class="nav-link">Home</a>
     </li>
     <li class="nav-item">
-      <a href="" class="nav-link">What we offer</a>
+      <a href="#whatweoffer" class="nav-link">What we offer</a>
     </li>
     <li class="nav-item">
-      <a href="" class="nav-link">Support</a>
+      <a href="#support" class="nav-link">Support</a>
     </li>
+
     <li class="nav-item">
-      <a href="" class="nav-link">Contact</a>
-    </li>
-    <li class="nav-item">
-      <a href="" class="nav-link">About</a>
+      <a href="#about" class="nav-link">About</a>
     </li>
   </ul>
   </div>
@@ -65,7 +63,7 @@
     </div>
   </div>
 </header>
-<section class="about r-p" id="about">
+<section class="about r-p" id="whatweoffer">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -116,6 +114,45 @@
         </div>
     </div>
   </div>
+</section>
+
+
+
+<section class="slid text-center">
+  <h3>Genres</h3>
+  <div id="container">
+<div id="slider-container" class="slider">
+	<div class="slide">
+			<img id="crdimg" src="images\hind.jpg" alt="">
+	</div>
+	<div class="slide">
+			<img src="images\rap.jpg" alt="">
+	</div>
+	<div class="slide">
+			<img src="images\ulti.jpg" alt="">
+	</div>
+  <div class="slide">
+			<img src="images\viral.jpg" alt="">
+	</div>
+  <div class="slide">
+      <img src="images\indie.jpg" alt="">
+  </div>
+  <div class="slide">
+      <img src="images\rock.jpg" alt="">
+  </div>
+  <div class="slide">
+      <img src="images\rnb.jpg" alt="">
+  </div>
+  <div class="slide">
+      <img src="images\jazz.jpg" alt="">
+  </div>
+  </div>
+
+
+
+
+<div class="overlay"></div>
+
 </section>
 
 <section class="service-class bg-sec r-p" id="service-id">
@@ -172,6 +209,14 @@
       </div>
     </div>
   </div>
+</section>
+
+<section class="footer" id="foot">
+  <div class="container text-center">
+    <h6>
+© 2021 Octave all rights reserved</h6>
+  </div>
+
 </section>
 
 
