--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 <section class="footer" id="foot">
   <div class="container text-center">
     <h6>
-© 2021 Octave all rights reserved</h6>
+© 2021 Octave Designed & Developed by Aditya Tare</h6>
   </div>
 
 </section>
