--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <p>There are millions of tracks and episodes on Octave.</p>
 <p>So whether you’re behind the wheel, working out, partying or relaxing, the right music or podcast is always at your fingertips.</p>
-<p>Choose what you want to listen to, or let Spotify surprise you.</p>
+<p>Choose what you want to listen to, or let Octave surprise you.</p>
 
 <p>You can also browse through the collections of friends, artists, and celebrities, or create a radio station and just sit back.</p>
 
